--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <footer>
     
     <div class="socials">
-      <img class="social-icon" src="./Assets/icon-facebook.svg" alt="facebook icon">
-      <img class="social-icon" src="./Assets/icon-pinterest.svg" alt="pinteret icon">
-      <img class="social-icon" src="./Assets/icon-instagram.svg" alt="instagram icon">
+      <img class="social-icon" src="./icon-facebook.svg" alt="facebook icon">
+      <img class="social-icon" src="./icon-pinterest.svg" alt="pinteret icon">
+      <img class="social-icon" src="./icon-instagram.svg" alt="instagram icon">
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
